still need to get put to work

--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,7 @@
   height: 60%;
   border-radius: 50%;
   margin: auto;
-  background-color: blue;
+  background-color: rgba(224, 107, 11, 0.794);
   align-self: center;
 }
 
@@ -121,8 +121,10 @@
   box-shadow: 5px 6px #88888834;
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: flex-start;
 }
+
+
 
 .fireButton {
     background-color: rgb(182, 12, 12); 
@@ -131,6 +133,7 @@
     margin-bottom: 10px;
     padding: 15px 32px;
     text-align: center;
+    align-self: flex-end;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
